A lot of fixes, now backend works, I hope...
